--- a/locales/bg.json
+++ b/locales/bg.json
@@ -155,6 +155,7 @@
   "Height": "Височина",
   "Dimension": "Размер",
   "dimensions": "Размери",
+  "diameter": "Диаметър",
   "orientation": "Ориентация",
   "vertical": "Вертикално",
   "horizontal": "Хоризонтално",
