--- a/locales/cs.json
+++ b/locales/cs.json
@@ -155,6 +155,7 @@
   "Height": "Výška",
   "Dimension": "Rozměr",
   "dimensions": "Rozměry",
+  "diameter": "Průměr",
   "orientation": "Orientace",
   "vertical": "Svisle",
   "horizontal": "Vodorovně",
