--- a/locales/fr.json
+++ b/locales/fr.json
@@ -155,6 +155,7 @@
   "Height": "Hauteur",
   "Dimension": "Dimension",
   "dimensions": "Dimensions",
+  "diameter": "Diamètre",
   "orientation": "Orientation",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
