--- a/locales/hr.json
+++ b/locales/hr.json
@@ -155,6 +155,7 @@
   "Height": "Visina",
   "Dimension": "Dimenzija",
   "dimensions": "Dimenzije",
+  "diameter": "Promjer",
   "orientation": "Orijentacija",
   "vertical": "Okomito",
   "horizontal": "Vodoravno",
