--- a/locales/lt.json
+++ b/locales/lt.json
@@ -155,6 +155,7 @@
   "Height": "Aukštis",
   "Dimension": "Matmuo",
   "dimensions": "Matmenys",
+  "diameter": "Skersmuo",
   "orientation": "Orientacija",
   "vertical": "Vertikaliai",
   "horizontal": "Horizontaliai",
