--- a/locales/lv.json
+++ b/locales/lv.json
@@ -155,6 +155,7 @@
   "Height": "Augstums",
   "Dimension": "Izmērs",
   "dimensions": "Izmēri",
+  "diameter": "Diametrs",
   "orientation": "Orientācija",
   "vertical": "Vertikāli",
   "horizontal": "Horizontāli",
