--- a/locales/nl.json
+++ b/locales/nl.json
@@ -155,6 +155,7 @@
   "Height": "Hoogte",
   "Dimension": "Afmeting",
   "dimensions": "Afmetingen",
+  "diameter": "Diameter",
   "orientation": "Oriëntatie",
   "vertical": "Verticaal",
   "horizontal": "Horizontaal",
