--- a/locales/no.json
+++ b/locales/no.json
@@ -155,6 +155,7 @@
   "Height": "Høyde",
   "Dimension": "Dimensjon",
   "dimensions": "Dimensjoner",
+  "diameter": "Diameter",
   "orientation": "Orientering",
   "vertical": "Vertikalt",
   "horizontal": "Horisontalt",
