--- a/locales/pl.json
+++ b/locales/pl.json
@@ -155,6 +155,7 @@
   "Height": "Wysokość",
   "Dimension": "Wymiar",
   "dimensions": "Wymiary",
+  "diameter": "Średnica",
   "orientation": "Orientacja",
   "vertical": "Pionowo",
   "horizontal": "Poziomo",
