--- a/locales/pt.json
+++ b/locales/pt.json
@@ -155,6 +155,7 @@
   "Height": "Altura",
   "Dimension": "Dimensão",
   "dimensions": "Dimensões",
+  "diameter": "Diâmetro",
   "orientation": "Orientação",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
