--- a/locales/ro.json
+++ b/locales/ro.json
@@ -155,6 +155,7 @@
   "Height": "Înălțime",
   "Dimension": "Dimensiune",
   "dimensions": "Dimensiuni",
+  "diameter": "Diametru",
   "orientation": "Orientare",
   "vertical": "Vertical",
   "horizontal": "Orizontal",
