--- a/locales/sk.json
+++ b/locales/sk.json
@@ -155,6 +155,7 @@
   "Height": "Výška",
   "Dimension": "Rozmer",
   "dimensions": "Rozmery",
+  "diameter": "Priemer",
   "orientation": "Orientácia",
   "vertical": "Zvisle",
   "horizontal": "Vodorovne",
