--- a/locales/sq.json
+++ b/locales/sq.json
@@ -155,6 +155,7 @@
   "Height": "Lartësi",
   "Dimension": "Dimension",
   "dimensions": "Dimensione",
+  "diameter": "Diametri",
   "orientation": "Orientimi",
   "vertical": "Vertikale",
   "horizontal": "Horizontale",
