--- a/locales/sv.json
+++ b/locales/sv.json
@@ -155,6 +155,7 @@
   "Height": "Höjd",
   "Dimension": "Dimension",
   "dimensions": "Dimensioner",
+  "diameter": "Diameter",
   "orientation": "Orientering",
   "vertical": "Vertikal",
   "horizontal": "Horisontell",
