--- a/locales/da.json
+++ b/locales/da.json
@@ -155,6 +155,7 @@
   "Height": "Højde",
   "Dimension": "Dimension",
   "dimensions": "Dimensioner",
+  "diameter": "Diameter",
   "orientation": "Orientering",
   "vertical": "Lodret",
   "horizontal": "Vandret",
