--- a/locales/de.json
+++ b/locales/de.json
@@ -155,6 +155,7 @@
   "Height": "Höhe",
   "Dimension": "Dimension",
   "dimensions": "Abmessungen",
+  "diameter": "Durchmesser",
   "orientation": "Ausrichtung",
   "vertical": "Vertikal",
   "horizontal": "Horizontal",
