--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,7 @@
   "Height": "Height",
   "Dimension": "Dimension",
   "dimensions": "Dimensions",
+  "diameter": "Diameter",
   "orientation": "Orientation",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
