--- a/locales/es.json
+++ b/locales/es.json
@@ -155,6 +155,7 @@
   "Height": "Altura",
   "Dimension": "Dimensión",
   "dimensions": "Dimensiones",
+  "diameter": "Diámetro",
   "orientation": "Orientación",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
