--- a/locales/et.json
+++ b/locales/et.json
@@ -155,6 +155,7 @@
   "Height": "Kõrgus",
   "Dimension": "Mõõde",
   "dimensions": "Mõõtmed",
+  "diameter": "Läbimõõt",
   "orientation": "Orientatsioon",
   "vertical": "Vertikaalne",
   "horizontal": "Horisontaalne",
