--- a/locales/hu.json
+++ b/locales/hu.json
@@ -155,6 +155,7 @@
   "Height": "Magasság",
   "Dimension": "Méret",
   "dimensions": "Méretek",
+  "diameter": "Átmérő",
   "orientation": "Tájolás",
   "vertical": "Függőleges",
   "horizontal": "Vízszintes",
