--- a/locales/it.json
+++ b/locales/it.json
@@ -155,6 +155,7 @@
   "Height": "Altezza",
   "Dimension": "Dimensione",
   "dimensions": "Dimensioni",
+  "diameter": "Diametro",
   "orientation": "Orientamento",
   "vertical": "Verticale",
   "horizontal": "Orizzontale",
