--- a/locales/sr.json
+++ b/locales/sr.json
@@ -155,6 +155,7 @@
   "Height": "Висина",
   "Dimension": "Димензија",
   "dimensions": "Димензије",
+  "diameter": "Пречник",
   "orientation": "Оријентација",
   "vertical": "Вертикално",
   "horizontal": "Хоризонтално",
