--- a/locales/bg.json
+++ b/locales/bg.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF е генериран",
   "errorGeneratingPDF": "Грешка при генериране на PDF",
   "configurationSaved": "Конфигурацията е запазена",
+  "configurationOverwritten": "Конфигурацията е презаписана",
+  "configurationOverwrittenAndDownloaded": "Конфигурацията е презаписана и изтеглена",
+  "configurationOverwrittenInBrowserMemory": "Конфигурацията е презаписана в паметта на браузъра",
+  "configurationSavedToFileAndMemory": "Конфигурацията е запазена във файл и паметта на браузъра",
+  "configurationSavedAndDownloaded": "Конфигурацията е запазена и изтеглена",
   "configSavedToFile": "Конфигурацията е запазена във файл",
   "saveError": "Грешка при запазване",
   "configurationLoaded": "Конфигурацията е заредена",
