--- a/locales/cs.json
+++ b/locales/cs.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF bylo vygenerováno",
   "errorGeneratingPDF": "Chyba při generování PDF",
   "configurationSaved": "Konfigurace uložena",
+  "configurationOverwritten": "Konfigurace přepsána",
+  "configurationOverwrittenAndDownloaded": "Konfigurace přepsána a stažena",
+  "configurationOverwrittenInBrowserMemory": "Konfigurace přepsána v paměti prohlížeče",
+  "configurationSavedToFileAndMemory": "Konfigurace uložena do souboru a paměti prohlížeče",
+  "configurationSavedAndDownloaded": "Konfigurace uložena a stažena",
   "configSavedToFile": "Konfigurace uložena do souboru",
   "saveError": "Chyba při ukládání",
   "configurationLoaded": "Konfigurace načtena",
