--- a/locales/es.json
+++ b/locales/es.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF generado",
   "errorGeneratingPDF": "Error al generar PDF",
   "configurationSaved": "Configuración guardada",
+  "configurationOverwritten": "Configuración sobrescrita",
+  "configurationOverwrittenAndDownloaded": "Configuración sobrescrita y descargada",
+  "configurationOverwrittenInBrowserMemory": "Configuración sobrescrita en la memoria del navegador",
+  "configurationSavedToFileAndMemory": "Configuración guardada en archivo y memoria del navegador",
+  "configurationSavedAndDownloaded": "Configuración guardada y descargada",
   "configSavedToFile": "Configuración guardada en archivo",
   "saveError": "Error al guardar",
   "configurationLoaded": "Configuración cargada",
