--- a/locales/fi.json
+++ b/locales/fi.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF luotu",
   "errorGeneratingPDF": "Virhe PDF:n luomisessa",
   "configurationSaved": "Konfiguraatio tallennettu",
+  "configurationOverwritten": "Konfiguraatio ylikirjoitettu",
+  "configurationOverwrittenAndDownloaded": "Konfiguraatio ylikirjoitettu ja ladattu",
+  "configurationOverwrittenInBrowserMemory": "Konfiguraatio ylikirjoitettu selaimen muistissa",
+  "configurationSavedToFileAndMemory": "Konfiguraatio tallennettu tiedostoon ja selaimen muistiin",
+  "configurationSavedAndDownloaded": "Konfiguraatio tallennettu ja ladattu",
   "configSavedToFile": "Konfiguraatio tallennettu tiedostoon",
   "saveError": "Tallennusvirhe",
   "configurationLoaded": "Konfiguraatio ladattu",
