--- a/locales/hu.json
+++ b/locales/hu.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF generálva",
   "errorGeneratingPDF": "Hiba a PDF generálása során",
   "configurationSaved": "Konfiguráció mentve",
+  "configurationOverwritten": "Konfiguráció felülírva",
+  "configurationOverwrittenAndDownloaded": "Konfiguráció felülírva és letöltve",
+  "configurationOverwrittenInBrowserMemory": "Konfiguráció felülírva a böngésző memóriájában",
+  "configurationSavedToFileAndMemory": "Konfiguráció mentve fájlba és böngésző memóriába",
+  "configurationSavedAndDownloaded": "Konfiguráció mentve és letöltve",
   "configSavedToFile": "Konfiguráció fájlba mentve",
   "saveError": "Mentési hiba",
   "configurationLoaded": "Konfiguráció betöltve",
