--- a/locales/it.json
+++ b/locales/it.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF generato",
   "errorGeneratingPDF": "Errore durante la generazione del PDF",
   "configurationSaved": "Configurazione salvata",
+  "configurationOverwritten": "Configurazione sovrascritta",
+  "configurationOverwrittenAndDownloaded": "Configurazione sovrascritta e scaricata",
+  "configurationOverwrittenInBrowserMemory": "Configurazione sovrascritta nella memoria del browser",
+  "configurationSavedToFileAndMemory": "Configurazione salvata nel file e nella memoria del browser",
+  "configurationSavedAndDownloaded": "Configurazione salvata e scaricata",
   "configSavedToFile": "Configurazione salvata su file",
   "saveError": "Errore di salvataggio",
   "configurationLoaded": "Configurazione caricata",
