--- a/locales/lt.json
+++ b/locales/lt.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF sugeneruotas",
   "errorGeneratingPDF": "Klaida generuojant PDF",
   "configurationSaved": "Konfigūracija išsaugota",
+  "configurationOverwritten": "Konfigūracija perrašyta",
+  "configurationOverwrittenAndDownloaded": "Konfigūracija perrašyta ir atsisiųsta",
+  "configurationOverwrittenInBrowserMemory": "Konfigūracija perrašyta naršyklės atmintyje",
+  "configurationSavedToFileAndMemory": "Konfigūracija išsaugota į failą ir naršyklės atmintį",
+  "configurationSavedAndDownloaded": "Konfigūracija išsaugota ir atsisiųsta",
   "configSavedToFile": "Konfigūracija išsaugota į failą",
   "saveError": "Išsaugojimo klaida",
   "configurationLoaded": "Konfigūracija įkelta",
