--- a/locales/lv.json
+++ b/locales/lv.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF ģenerēts",
   "errorGeneratingPDF": "Kļūda ģenerējot PDF",
   "configurationSaved": "Konfigurācija saglabāta",
+  "configurationOverwritten": "Konfigurācija pārrakstīta",
+  "configurationOverwrittenAndDownloaded": "Konfigurācija pārrakstīta un lejupielādēta",
+  "configurationOverwrittenInBrowserMemory": "Konfigurācija pārrakstīta pārlūka atmiņā",
+  "configurationSavedToFileAndMemory": "Konfigurācija saglabāta failā un pārlūka atmiņā",
+  "configurationSavedAndDownloaded": "Konfigurācija saglabāta un lejupielādēta",
   "configSavedToFile": "Konfigurācija saglabāta failā",
   "saveError": "Saglabāšanas kļūda",
   "configurationLoaded": "Konfigurācija ielādēta",
