--- a/locales/nl.json
+++ b/locales/nl.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF gegenereerd",
   "errorGeneratingPDF": "Fout bij genereren PDF",
   "configurationSaved": "Configuratie opgeslagen",
+  "configurationOverwritten": "Configuratie overschreven",
+  "configurationOverwrittenAndDownloaded": "Configuratie overschreven en gedownload",
+  "configurationOverwrittenInBrowserMemory": "Configuratie overschreven in browsergeheugen",
+  "configurationSavedToFileAndMemory": "Configuratie opgeslagen in bestand en browsergeheugen",
+  "configurationSavedAndDownloaded": "Configuratie opgeslagen en gedownload",
   "configSavedToFile": "Configuratie opgeslagen in bestand",
   "saveError": "Opslagfout",
   "configurationLoaded": "Configuratie geladen",
