--- a/locales/no.json
+++ b/locales/no.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF generert",
   "errorGeneratingPDF": "Feil ved generering av PDF",
   "configurationSaved": "Konfigurasjon lagret",
+  "configurationOverwritten": "Konfigurasjon overskrevet",
+  "configurationOverwrittenAndDownloaded": "Konfigurasjon overskrevet og lastet ned",
+  "configurationOverwrittenInBrowserMemory": "Konfigurasjon overskrevet i nettleserens minne",
+  "configurationSavedToFileAndMemory": "Konfigurasjon lagret til fil og nettleserens minne",
+  "configurationSavedAndDownloaded": "Konfigurasjon lagret og lastet ned",
   "configSavedToFile": "Konfigurasjon lagret til fil",
   "saveError": "Lagringsfeil",
   "configurationLoaded": "Konfigurasjon lastet inn",
