--- a/locales/pt.json
+++ b/locales/pt.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF gerado",
   "errorGeneratingPDF": "Erro ao gerar PDF",
   "configurationSaved": "Configuração guardada",
+  "configurationOverwritten": "Configuração sobrescrita",
+  "configurationOverwrittenAndDownloaded": "Configuração sobrescrita e descarregada",
+  "configurationOverwrittenInBrowserMemory": "Configuração sobrescrita na memória do navegador",
+  "configurationSavedToFileAndMemory": "Configuração guardada no ficheiro e na memória do navegador",
+  "configurationSavedAndDownloaded": "Configuração guardada e descarregada",
   "configSavedToFile": "Configuração guardada no ficheiro",
   "saveError": "Erro ao guardar",
   "configurationLoaded": "Configuração carregada",
