--- a/locales/sk.json
+++ b/locales/sk.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF bolo vygenerované",
   "errorGeneratingPDF": "Chyba pri generovaní PDF",
   "configurationSaved": "Konfigurácia uložená",
+  "configurationOverwritten": "Konfigurácia prepísaná",
+  "configurationOverwrittenAndDownloaded": "Konfigurácia prepísaná a stiahnutá",
+  "configurationOverwrittenInBrowserMemory": "Konfigurácia prepísaná v pamäti prehliadača",
+  "configurationSavedToFileAndMemory": "Konfigurácia uložená do súboru a pamäte prehliadača",
+  "configurationSavedAndDownloaded": "Konfigurácia uložená a stiahnutá",
   "configSavedToFile": "Konfigurácia uložená do súboru",
   "saveError": "Chyba pri ukladaní",
   "configurationLoaded": "Konfigurácia načítaná",
