--- a/locales/sq.json
+++ b/locales/sq.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF u gjenerua",
   "errorGeneratingPDF": "Gabim në gjenerimin e PDF",
   "configurationSaved": "Konfigurimi u ruajt",
+  "configurationOverwritten": "Konfigurimi u mbishkrua",
+  "configurationOverwrittenAndDownloaded": "Konfigurimi u mbishkrua dhe u shkarkua",
+  "configurationOverwrittenInBrowserMemory": "Konfigurimi u mbishkrua në memorien e shfletuesit",
+  "configurationSavedToFileAndMemory": "Konfigurimi u ruajt në skedar dhe memorien e shfletuesit",
+  "configurationSavedAndDownloaded": "Konfigurimi u ruajt dhe u shkarkua",
   "configSavedToFile": "Konfigurimi u ruajt në skedar",
   "saveError": "Gabim në ruajtje",
   "configurationLoaded": "Konfigurimi u ngarkua",
