--- a/locales/sv.json
+++ b/locales/sv.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF genererad",
   "errorGeneratingPDF": "Fel vid generering av PDF",
   "configurationSaved": "Konfiguration sparad",
+  "configurationOverwritten": "Konfiguration överskrivits",
+  "configurationOverwrittenAndDownloaded": "Konfiguration överskrivits och nedladdad",
+  "configurationOverwrittenInBrowserMemory": "Konfiguration överskrivits i webbläsarens minne",
+  "configurationSavedToFileAndMemory": "Konfiguration sparad i fil och webbläsarens minne",
+  "configurationSavedAndDownloaded": "Konfiguration sparad och nedladdad",
   "configSavedToFile": "Konfiguration sparad i fil",
   "saveError": "Sparningsfel",
   "configurationLoaded": "Konfiguration laddad",
