--- a/locales/da.json
+++ b/locales/da.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF er genereret",
   "errorGeneratingPDF": "Fejl ved generering af PDF",
   "configurationSaved": "Konfiguration gemt",
+  "configurationOverwritten": "Konfiguration overskrevet",
+  "configurationOverwrittenAndDownloaded": "Konfiguration overskrevet og downloadet",
+  "configurationOverwrittenInBrowserMemory": "Konfiguration overskrevet i browserens hukommelse",
+  "configurationSavedToFileAndMemory": "Konfiguration gemt til fil og browserens hukommelse",
+  "configurationSavedAndDownloaded": "Konfiguration gemt og downloadet",
   "configSavedToFile": "Konfiguration gemt til fil",
   "saveError": "Gemningsfejl",
   "configurationLoaded": "Konfiguration indlæst",
