--- a/locales/de.json
+++ b/locales/de.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF wurde generiert",
   "errorGeneratingPDF": "Fehler beim Generieren der PDF",
   "configurationSaved": "Konfiguration gespeichert",
+  "configurationOverwritten": "Konfiguration überschrieben",
+  "configurationOverwrittenAndDownloaded": "Konfiguration überschrieben und heruntergeladen",
+  "configurationOverwrittenInBrowserMemory": "Konfiguration im Browser-Speicher überschrieben",
+  "configurationSavedToFileAndMemory": "Konfiguration in Datei und Browser-Speicher gespeichert",
+  "configurationSavedAndDownloaded": "Konfiguration gespeichert und heruntergeladen",
   "configSavedToFile": "Konfiguration in Datei gespeichert",
   "saveError": "Speicherfehler",
   "configurationLoaded": "Konfiguration geladen",
