--- a/locales/en.json
+++ b/locales/en.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF has been generated",
   "errorGeneratingPDF": "Error generating PDF",
   "configurationSaved": "Configuration saved",
+  "configurationOverwritten": "Configuration overwritten",
+  "configurationOverwrittenAndDownloaded": "Configuration overwritten and downloaded",
+  "configurationOverwrittenInBrowserMemory": "Configuration overwritten in browser memory",
+  "configurationSavedToFileAndMemory": "Configuration saved to file and browser memory",
+  "configurationSavedAndDownloaded": "Configuration saved and downloaded",
   "configSavedToFile": "Configuration saved to file",
   "saveError": "Save error",
   "configurationLoaded": "Configuration loaded",
