--- a/locales/et.json
+++ b/locales/et.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF on genereeritud",
   "errorGeneratingPDF": "Viga PDF-i genereerimisel",
   "configurationSaved": "Konfiguratsioon salvestatud",
+  "configurationOverwritten": "Konfiguratsioon üle kirjutatud",
+  "configurationOverwrittenAndDownloaded": "Konfiguratsioon üle kirjutatud ja alla laaditud",
+  "configurationOverwrittenInBrowserMemory": "Konfiguratsioon üle kirjutatud brauseri mälus",
+  "configurationSavedToFileAndMemory": "Konfiguratsioon salvestatud faili ja brauseri mällu",
+  "configurationSavedAndDownloaded": "Konfiguratsioon salvestatud ja alla laaditud",
   "configSavedToFile": "Konfiguratsioon salvestatud faili",
   "saveError": "Salvestamise viga",
   "configurationLoaded": "Konfiguratsioon laaditud",
