--- a/locales/fr.json
+++ b/locales/fr.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF généré",
   "errorGeneratingPDF": "Erreur lors de la génération du PDF",
   "configurationSaved": "Configuration enregistrée",
+  "configurationOverwritten": "Configuration écrasée",
+  "configurationOverwrittenAndDownloaded": "Configuration écrasée et téléchargée",
+  "configurationOverwrittenInBrowserMemory": "Configuration écrasée dans la mémoire du navigateur",
+  "configurationSavedToFileAndMemory": "Configuration enregistrée dans le fichier et la mémoire du navigateur",
+  "configurationSavedAndDownloaded": "Configuration enregistrée et téléchargée",
   "configSavedToFile": "Configuration enregistrée dans le fichier",
   "saveError": "Erreur d'enregistrement",
   "configurationLoaded": "Configuration chargée",
