--- a/locales/hr.json
+++ b/locales/hr.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF generiran",
   "errorGeneratingPDF": "Greška pri generiranju PDF-a",
   "configurationSaved": "Konfiguracija spremljena",
+  "configurationOverwritten": "Konfiguracija prepisana",
+  "configurationOverwrittenAndDownloaded": "Konfiguracija prepisana i preuzeta",
+  "configurationOverwrittenInBrowserMemory": "Konfiguracija prepisana u memoriji preglednika",
+  "configurationSavedToFileAndMemory": "Konfiguracija spremljena u datoteku i memoriju preglednika",
+  "configurationSavedAndDownloaded": "Konfiguracija spremljena i preuzeta",
   "configSavedToFile": "Konfiguracija spremljena u datoteku",
   "saveError": "Greška pri spremanju",
   "configurationLoaded": "Konfiguracija učitana",
