--- a/locales/pl.json
+++ b/locales/pl.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF został wygenerowany",
   "errorGeneratingPDF": "Błąd podczas generowania PDF",
   "configurationSaved": "Konfiguracja zapisana",
+  "configurationOverwritten": "Konfiguracja nadpisana",
+  "configurationOverwrittenAndDownloaded": "Konfiguracja nadpisana i pobrana",
+  "configurationOverwrittenInBrowserMemory": "Konfiguracja nadpisana w pamięci przeglądarki",
+  "configurationSavedToFileAndMemory": "Konfiguracja zapisana do pliku i pamięci przeglądarki",
+  "configurationSavedAndDownloaded": "Konfiguracja zapisana i pobrana",
   "configSavedToFile": "Konfiguracja zapisana do pliku",
   "saveError": "Błąd zapisu",
   "configurationLoaded": "Konfiguracja wczytana",
