--- a/locales/ro.json
+++ b/locales/ro.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF-ul a fost generat",
   "errorGeneratingPDF": "Eroare la generarea PDF-ului",
   "configurationSaved": "Configurație salvată",
+  "configurationOverwritten": "Configurație suprascrisă",
+  "configurationOverwrittenAndDownloaded": "Configurație suprascrisă și descărcată",
+  "configurationOverwrittenInBrowserMemory": "Configurație suprascrisă în memoria browserului",
+  "configurationSavedToFileAndMemory": "Configurație salvată în fișier și memoria browserului",
+  "configurationSavedAndDownloaded": "Configurație salvată și descărcată",
   "configSavedToFile": "Configurație salvată în fișier",
   "saveError": "Eroare la salvare",
   "configurationLoaded": "Configurație încărcată",
