--- a/locales/sr.json
+++ b/locales/sr.json
@@ -139,6 +139,11 @@
   "pdfGenerated": "PDF је генерисан",
   "errorGeneratingPDF": "Грешка при генерисању PDF",
   "configurationSaved": "Конфигурација је сачувана",
+  "configurationOverwritten": "Конфигурација је преписана",
+  "configurationOverwrittenAndDownloaded": "Конфигурација је преписана и преузета",
+  "configurationOverwrittenInBrowserMemory": "Конфигурација је преписана у меморији претраживача",
+  "configurationSavedToFileAndMemory": "Конфигурација је сачувана у датотеку и меморију претраживача",
+  "configurationSavedAndDownloaded": "Конфигурација је сачувана и преузета",
   "configSavedToFile": "Конфигурација је сачувана у датотеку",
   "saveError": "Грешка при чувању",
   "configurationLoaded": "Конфигурација је учитана",
