--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,7 @@
   "Height": "Height",
   "Dimension": "Dimension",
   "dimensions": "Dimensions",
+  "diameter": "Diameter",
   "orientation": "Orientation",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
@@ -176,5 +177,32 @@
   "changeToHorizontal": "Change to horizontal",
   "changeToVertical": "Change to vertical",
   "selectedGroupInfo": "SELECTED GROUP ({count} pcs in space)",
-  "pcsInSpace": "pcs in space"
+  "pcsInSpace": "pcs in space",
+  "cargoSpaceLabel": "Cargo Space",
+  "numberOfUnits": "Number of Units",
+  "totalWeightLabel": "Total Weight",
+  "spaceUsageLabel": "Space Usage",
+  "loadCapacityUsageLabel": "Load Capacity Usage",
+  "currentConfig": "(Current)",
+  "customFallback": "Custom",
+  "noCargo": "No cargo",
+  "configurationOverwritten": "Configuration overwritten",
+  "configurationSavedNew": "Configuration saved",
+  "configOverwrittenAndDownloaded": "Configuration overwritten and downloaded",
+  "configSavedAndDownloaded": "Configuration saved and downloaded",
+  "overwriteInMemory": "Overwrite in memory",
+  "saveToMemory": "Save to memory",
+  "saveAndDownloadTooltip": "Save and download",
+  "configOverwrittenInMemory": "Configuration overwritten in browser memory",
+  "configSavedToFileAndMemory": "Configuration saved to file and browser memory",
+  "configSavedInMemoryOnly": "Configuration saved in browser memory",
+  "unitsDidNotFit": "{count} units did not fit in the space",
+  "unitsExceededWeightLimit": "{count} units exceeded weight limit",
+  "loadPlanPerspectiveView": "Load Plan - Perspective View",
+  "loadPlanTopView": "Load Plan - Top View",
+  "loadPlanGroupView": "Load Plan - Group View",
+  "plannedAndGeneratedOn": "Planned and generated on",
+  "dateLabel": "Date",
+  "outsideParentheses": "(+{count} outside)",
+  "transportNomadSite": "Transport-Nomad.com"
 }
