--- a/locales/pl.json
+++ b/locales/pl.json
@@ -155,6 +155,7 @@
   "Height": "Wysokość",
   "Dimension": "Wymiar",
   "dimensions": "Wymiary",
+  "diameter": "Średnica",
   "orientation": "Orientacja",
   "vertical": "Pionowo",
   "horizontal": "Poziomo",
@@ -176,5 +177,32 @@
   "changeToHorizontal": "Zmień na poziomo",
   "changeToVertical": "Zmień na pionowo",
   "selectedGroupInfo": "ZAZNACZONA GRUPA ({count} szt w przestrzeni)",
-  "pcsInSpace": "szt w przestrzeni"
+  "pcsInSpace": "szt w przestrzeni",
+  "cargoSpaceLabel": "Przestrzeń ładunkowa",
+  "numberOfUnits": "Liczba jednostek",
+  "totalWeightLabel": "Waga całkowita",
+  "spaceUsageLabel": "Wykorzystanie przestrzeni",
+  "loadCapacityUsageLabel": "Wykorzystanie ładowności",
+  "currentConfig": "(Aktualny)",
+  "customFallback": "Własne",
+  "noCargo": "Brak ładunku",
+  "configurationOverwritten": "Konfiguracja nadpisana",
+  "configurationSavedNew": "Konfiguracja zapisana",
+  "configOverwrittenAndDownloaded": "Konfiguracja nadpisana i pobrana",
+  "configSavedAndDownloaded": "Konfiguracja zapisana i pobrana",
+  "overwriteInMemory": "Nadpisz w pamięci",
+  "saveToMemory": "Zapisz w pamięci",
+  "saveAndDownloadTooltip": "Zapisz i pobierz",
+  "configOverwrittenInMemory": "Konfiguracja nadpisana w pamięci przeglądarki",
+  "configSavedToFileAndMemory": "Konfiguracja zapisana do pliku i w pamięci przeglądarki",
+  "configSavedInMemoryOnly": "Konfiguracja zapisana w pamięci przeglądarki",
+  "unitsDidNotFit": "{count} jednostek nie zmieściło się w przestrzeni",
+  "unitsExceededWeightLimit": "{count} jednostek przekroczyło limit wagowy",
+  "loadPlanPerspectiveView": "Plan załadunku - Widok perspektywiczny",
+  "loadPlanTopView": "Plan załadunku - Widok z góry",
+  "loadPlanGroupView": "Plan załadunku - Widok grupy",
+  "plannedAndGeneratedOn": "Zaplanowano i wygenerowano na",
+  "dateLabel": "Data",
+  "outsideParentheses": "(+{count} poza)",
+  "transportNomadSite": "Transport-Nomad.com"
 }
