--- a/locales/en.json
+++ b/locales/en.json
@@ -156,6 +156,9 @@
   "Dimension": "Dimension",
   "dimensions": "Dimensions",
   "diameter": "Diameter",
+  "cylinderLength": "Length",
+  "tooltipDiameter": "Diameter (cm)",
+  "tooltipCylinderLength": "Cylinder length (cm)",
   "orientation": "Orientation",
   "vertical": "Vertical",
   "horizontal": "Horizontal",
