--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,9 +1,9 @@
 {
   "cargoSpace": "Przestrzeń ładunkowa",
   "customDimensions": "Własne wymiary",
-  "length": "Długość",
-  "width": "Szerokość",
-  "height": "Wysokość",
+  "length": "Dł.",
+  "width": "Szer.",
+  "height": "Wys.",
   "dimensions": "Wymiary",
   "volume": "Objętość",
   "maxLoadCapacity": "Maks. ładowność",
@@ -156,6 +156,9 @@
   "Dimension": "Wymiar",
   "dimensions": "Wymiary",
   "diameter": "Średnica",
+  "cylinderLength": "Długość",
+  "tooltipDiameter": "Średnica (cm)",
+  "tooltipCylinderLength": "Długość cylindra (cm)",
   "orientation": "Orientacja",
   "vertical": "Pionowo",
   "horizontal": "Poziomo",
